# SorobanTokenContract

./: Cargo.toml  README.md
.stellar/contract-ids/: soroban-token-contract.json
src/: contract.rs  lib.rs  test.rs
