[package]
name = "soroban-token-contract"
description = "Soraban standart token contract"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.7"
soroban-token-sdk = "22.0.7"


[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions= false
panic = "abort"
codegen-units=1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

